--- a/posts/2018-02-11.md
+++ b/posts/2018-02-11.md
@@ -2,6 +2,8 @@
 
 The [Yahoo Streaming Benchmark](https://github.com/yahoo/streaming-benchmarks) is fairly popular but, I will argue, exceedingly ill-named benchmark. Although it sets out to measure what a stream processor might be capable of, it ends up measuring just about everything other than the stream processor. I'll provide some data backing this up. A laptop will be involved.
 
+If you aren't familiar with the benchmark, this matters mostly because papers use it and reach conclusions that may not be as well supported as they hope. This isn't great for the papers, nor for the stream processing research area generally.
+
 ### The Benchmark
 
 The benchmark models a simple ad account environment, where events describing ad views enter the system and those of a certain type are accounted to their associated campaign. Every ten seconds the stream processor is expected to report the total ads for each campaign within those ten seconds. The benchmark as initially defined brings records in as [JSON](http://json.org) by way of a [Kafka](https://kafka.apache.org) queue, and has the stream processor consult [Redis](https://redis.io) to determine the mapping from advertisement id to campaign id, and as the recipient of the results of the streaming computation.
@@ -14,7 +16,7 @@ Yahoo has a [blog post](https://yahooeng.tumblr.com/post/135321837876/benchmarki
 
 I am not an executive, and so was unwilling to accept this summary. Also, "sub-second latencies"? "Relatively high throughputs"? Surely we can learn more about this benchmark.
 
-This learning is impaired by epically bad figures. This is an actual figure (not a screenshot) from the post summarizing their findings (credit, as appropriate, to Yahoo):
+This learning is impaired by rather bad figures. This is an actual figure (not a screenshot) from the post summarizing their findings (credit, as appropriate, to Yahoo):
 
 ![Yahoo's conclusions](https://github.com/frankmcsherry/blog/blob/master/assets/ysb/yahoo.png)
 
@@ -24,11 +26,11 @@ Don't read too much into these results. It turns out they are benchmarking prett
 
 ### Survivor: YSB
 
-There are several moving parts inside the benchmark that are not the stream processor, and over the course of a few blog posts the teams behind Apaches Flink and Spark deconstructed the benchmark, repeatedly identifying the bottlenecks and voting them out of the benchmark.
+There are several moving parts inside the benchmark that are not the stream processor, and over the course of a few blog posts the teams behind [Apaches Flink and Spark](http://seuss.wikia.com/wiki/Thing_One_and_Thing_Two) deconstructed the YSB, repeatedly identifying the bottlenecks and voting them out of the benchmark.
 
 #### Week 1: Redis
 
-It turns out that doing a call into Redis for each record is not a brilliant idea. You don't actually have to do that, but apparently everyone was, and it was slow. All of these stream processors (at least Flink and Spark) have native `join` operators, and could just join the `(ad_id, campaign_id)` within the stream processor. Or, Spark can do this and it isn't clear if Flink yet can (it involves joining a windowed relation against a non-windowed relation), but both systems can certainly just sit on a 1,000 element map from `ad_id` to `campaign_id`, because that is all of 32 kilobytes (there are only 1000 ad ids in the benchmark).
+It turns out that doing a call into Redis for each record is not a brilliant idea. You don't actually have to do that (you could wait for the 10 second tick and then a call for each distinct ad id), but apparently everyone was, and it was slow. All of these stream processors (at least Flink and Spark) have native `join` operators, and could just join the `(ad_id, campaign_id)` within the stream processor. Or, Spark can do this and it isn't clear if Flink yet can (it involves joining a windowed relation against a non-windowed relation), but both systems can certainly just sit on a 1,000 element map from `ad_id` to `campaign_id`, because that is all of 32 kilobytes (there are only 1,000 ad ids in the benchmark).
 
 And so Redis got voted out of the benchmark.
 
@@ -36,11 +38,11 @@ And so Redis got voted out of the benchmark.
 
 Kafka is where the input data come from, so it is a pretty important part of the process. It is also where the data are initially in textual JSON representation with a bunch of fields that aren't really all that important to the benchmark. Things like user ids, ad types, ip addresses, all of which get discarded pretty much immediately.
 
-Data Artisans (the Flink folks) describe in [a post](https://data-artisans.com/blog/extending-the-yahoo-streaming-benchmark) how they found that bandwidth from their 10 node Kafka cluster to their 10 node Flink cluster was the next bottleneck. Their topology isn't exactly clear, but part of the problem seems to be that while they use 10 gigabit network links between their compute nodes, they have only a 1 gigabit connection between the Kafka and Flink clusters. This bottlenecks the Flink computation at 3 million records per second, just because they can't get the data out of their Kafka cluster any faster than this. It may also suggest that perhaps their next upgrade should be their network connection next rather than adding that 11th Kafka node. 
+Data Artisans (the Flink folks) describe in [a post](https://data-artisans.com/blog/extending-the-yahoo-streaming-benchmark) how they found that bandwidth from their 10 node Kafka cluster to their 10 node Flink cluster was the next bottleneck. Their topology isn't exactly clear, but part of the problem seems to be that while they use 10 gigabit network links between their compute nodes, they have only a 1 gigabit connection between the Kafka and Flink clusters. This bottlenecks the Flink computation at 3 million records per second, just because they can't get the data out of their Kafka cluster any faster than this. It may also suggest that perhaps their next upgrade should be their network connection next rather than adding that 11th Kafka node.
 
 In any case, the post describes how they move the data generation out of Kafka and [into the computation itself](https://github.com/dataArtisans/yahoo-streaming-benchmark/blob/master/flink-benchmarks/src/main/java/flink/benchmark/generator/EventGeneratorSource.java#L36-L59). They still behave as if they had received data from Kafka, but can now see the performance of the stream processor more clearly.
 
-At this point, for reference, their 10 node cluster (40 cores total) are able to process 15 million events per second.
+At this point, for reference, their 10 node cluster (40 cores total) are able to process 15 million events per second. That is 100x greater than the initial "relatively high throughput".
 
 #### Week 3: JSON
 
@@ -48,7 +50,7 @@ Last October Databricks (the Spark folks) had [their own blog post](https://data
 
 But, one change they did make was to shift away from producing and deserializing JSON strings (at least, the corresponding Flink implemenation has; the Spark code seems to be walled up). It turns out JSON deserialization is relatively expensive, and when you dispose of it you can crank single-core performance up to anywhere between 1.6 million (DB does Flink) to 2.5 million (DB does Spark) to 4.0 million (dA does Flink) records per second. The DataBricks folks bring 10 machines (40 cores) to bear and bring this up to 60 million records per second! Wooo!
 
-This rate, 60 million records per second, is a fair bit higher than the "relatively high throughputs" offered by the executive summary: 150,000 records per second. It may even be fair to say that at this point we are actually measuring the stream processors themselves, rather than Yahoo's performance-agnostic infrastructural decisions.
+This rate, 60 million records per second, is now even higher than the "relatively high throughputs" offered by the executive summary: 150,000 records per second. We may even be measuring the stream processors themselves, rather than Yahoo's performance-agnostic infrastructural decisions.
 
 ### Measuring stream processors
 
@@ -59,7 +61,7 @@ Apropos nothing in particular, yesterday I implemented the modified YSB, with in
 The differential dataflow fragment looks like this (`links` is the `(ad, campaign)` collection, `views` is the set of views with the filtered event type at the indicated time):
 
 ```rust
-let probe = 
+let probe =
     links
         .semijoin(&views)
         .map(|(_ad, campaign)| campaign)
@@ -70,31 +72,35 @@ let probe =
 
 This doesn't look like much, and indeed it isn't. It turn out that if you want tumbling window counts it is super easy in differential dataflow, as it reports for each time (here: window) by how much the counts have changed, which is just the sum for the window. If you want to see the results it prints them out for you; it could put them in Redis if you wanted that instead.
 
-Following the recent [Drizzle paper](http://shivaram.org/publications/drizzle-sosp17.pdf) I discarded the first five minutes of measurements and checked out the next five minutes. Each second I am reporting the number of records processed in that second, and the time after the second ends that timely returns the signal that all of the 100 counts have been correctly determined. This means I have 300 throughput measurements and 300 latency measurments, which are:
+Following the recent [Drizzle paper](http://shivaram.org/publications/drizzle-sosp17.pdf) I discarded the first five minutes of measurements and checked out the next five minutes. Every ten seconds I report the throughput as the number of records processed divided by ten, and the latency as the time after the ten seconds ends that timely returns the signal that all of the 100 counts have been correctly determined. This means I have 30 throughput measurements and 30 latency measurments, which are:
 
 ![Throughput](https://github.com/frankmcsherry/blog/blob/master/assets/ysb/throughput.png)
 
 ![Latency](https://github.com/frankmcsherry/blog/blob/master/assets/ysb/latency.png)
 
-So, this looks like mostly in excess of 20 million events per second, more like 24 million, and latencies that are sub-millisecond and often in the 300us to 400us range. All while listening to 90's dance music.
+So, this looks like roughly 35 million events per second, and latencies that are pretty much 300 microseconds (except for one screw-up).
 
 Does this make any sense? Sure. I mean, what do you have to do for each record? You have to consult a field to determine if you should keep the record, consult a field to see what the timestamp should be, and then insert the ad id with that timestamp. The next step is a differential `join`, and before executing anything differential accumulates its inputs, which it represents as multisets. There are 1,000 distinct ad identifiers (a plausible number for Yahoo's ad business) and after sorting each batch we just fold these results in to the totals. Once a window closes we dump the 1,000 results at join and consolidate the resulting campaign ids. It averages out to about 40ns per record, apparently.
 
-A better question is "what are the other systems doing?"
+I should stress that I'm working pretty hard to avoid doing any work in generating the data. Like the [recent benchmark implementations](https://github.com/dataArtisans/databricks-benchmark/blob/master/src/main/scala/com/databricks/benchmark/flink/EventGenerator.scala#L52-L64) I'm just round-robining through randomly generated ad identifiers and event types (1,000 and 3 are relatively prime). One could complain that I'm doing too little work here (feel free), but we really aren't supposed to be measuring anything other than the streaming computation, right?
 
 ### Drizzle
 
-Just this past year at SOSP Berkeley had a paper on [Drizzle](http://shivaram.org/publications/drizzle-sosp17.pdf). It is not fundamentally about the Yahoo Streaming Benchmark, but they use it as their main metric for assessing the improvements they make over vanilla Spark and Flink. One of the goals of the paper (though not the only one) is to improve latency, and in that effort they arrive at the following result:
+Just this past year at SOSP Berkeley had a paper on [Drizzle](http://shivaram.org/publications/drizzle-sosp17.pdf), a way to slice up Spark computations more finely to the point that maybe they start to look like streaming computations. The paper is not fundamentally about the Yahoo Streaming Benchmark, but they use it as their main metric for assessing the improvements they make over vanilla Spark and Flink. One of the goals of the paper (though not the only one) is to improve latency, and in that effort they arrive at the following result (from their abstract):
+
+> Our experiments on a 128 node EC2 cluster show that on the Yahoo Streaming Benchmark, Drizzle can achieve end-to-end record processing latencies of less than 100ms and can get 2–3x lower latency than Spark.
+
+Here's the figure that drives home the point:
 
 ![Throughput](https://github.com/frankmcsherry/blog/blob/master/assets/ysb/drizzle.png)
 
-The Drizzle-optimized implementation can process 20 million events per second with only 100ms latencies (using a workload-specific optimization), using just 128 computers and 512 cores. 
+The Drizzle-optimized implementation can process 20 million events per second with only 100ms latencies (using a workload-specific optimization), using just 128 computers and 512 cores.
 
 Wait, 128 computers? 512 cores? Don't we get better results with just one laptop core in differential dataflow?
 
 The Drizzle implementation is, to my understanding, still parsing JSON (though using neither Kafka nor Redis). In my experiments, JSON parsing represents a roughly 25x slowdown (I can parse YSB JSON records at about 900,000/s using [pikkr](https://github.com/pikkr/pikkr), a Rust port of [mison](https://www.microsoft.com/en-us/research/publication/mison-fast-json-parser-data-analytics/) from MSR). This explains a lot of the overhead, as well as the gap between these numbers and DataBricks' own report of 60 million records per second on just ten machines.
 
-Knowing only this (and subject to me being corrected) the Drizzle evaluation looks to be evaluating a massively parallel JSON deserializer rather than a stream processor. The stream processing component, retiring the 20 million records per second, needs at most one core (and some sweet tunes) and you get a 300x reduction in latency as a bonus (probably in no small part due to not using so many machines, Spark). It's actually a really *easy* streaming computation, not one that needs such a scary system unless you build in JSON deserialization as a requirement.
+Knowing only this (and subject to me being corrected) the Drizzle evaluation looks to be less about low-latency stream processing, and more an evaluation of a massively parallel JSON deserializer. The stream processing component, retiring the 20 million records per second, needs at most one core (and some sweet tunes) and you get a 300x reduction in latency as a bonus (probably in no small part due to not using so many machines, Spark). It's actually a really *easy* streaming computation, not one that needs such a scary system unless you build in JSON deserialization as a requirement.
 
 As a thought experiment (you too, SOSP2017 PC members): Take a read through the Drizzle paper and try to determine which conclusions about system design would still hold without the overheads of JSON deserialization.
 
