--- a/posts/2018-02-11.md
+++ b/posts/2018-02-11.md
@@ -102,7 +102,7 @@ The Drizzle implementation is, to my understanding, still parsing JSON (though u
 
 Knowing only this (and subject to me being corrected) the Drizzle evaluation looks to be less about low-latency stream processing, and more an evaluation of a massively parallel JSON deserializer. The stream processing component, retiring the 20 million records per second, needs at most one core (and some sweet tunes) and you get a 300x reduction in latency as a bonus (probably in no small part due to not using so many machines, Spark). It's actually a really *easy* streaming computation, not one that needs such a scary system unless you build in JSON deserialization as a requirement.
 
-As a thought experiment (you too, SOSP2017 PC members): Take a read through the Drizzle paper and try to determine which conclusions about system design would still hold without the overheads of JSON deserialization.
+As a thought experiment (you too, SOSP2017 PC members): Take a read through the Drizzle paper and try to determine which conclusions about system design would still hold without the overheads of JSON deserialization. I don't know that any of the conclusions are wrong, but would you say they are well-supported by the YSB measurements?
 
 ### Moving forward
 
