--- a/posts/2018-02-11.md
+++ b/posts/2018-02-11.md
@@ -1,6 +1,6 @@
 ## The Yahoo Streaming Benchmark
 
-The [Yahoo Streaming Benchmark](https://github.com/yahoo/streaming-benchmarks) is fairly popular but, I will argue, exceedingly ill-named benchmark. Although it sets out to measure what a stream processor might be capable of, it ends up measuring just about everything other than the stream processor. I'll provide some data backing this up. A laptop will be involved.
+The [Yahoo Streaming Benchmark](https://github.com/yahoo/streaming-benchmarks) is fairly popular but, I will argue, an exceedingly ill-named benchmark. Although it sets out to measure what a stream processor might be capable of, it ends up measuring just about everything other than the stream processor. I'll provide some data backing this up. A laptop will be involved.
 
 If you aren't familiar with the benchmark, this matters mostly because papers use it and reach conclusions that may not be as well supported as they hope. This isn't great for the papers, nor for the stream processing research area generally.
 
@@ -98,16 +98,16 @@ The Drizzle-optimized implementation can process 20 million events per second wi
 
 Wait, 128 computers? 512 cores? Don't we get better results with just one laptop core in differential dataflow?
 
-The Drizzle implementation is, to my understanding, still parsing JSON (though using neither Kafka nor Redis). In my experiments, JSON parsing represents a roughly 25x slowdown (I can parse YSB JSON records at about 900,000/s using [pikkr](https://github.com/pikkr/pikkr), a Rust port of [mison](https://www.microsoft.com/en-us/research/publication/mison-fast-json-parser-data-analytics/) from MSR). This explains a lot of the overhead, as well as the gap between these numbers and DataBricks' own report of 60 million records per second on just ten machines.
+The Drizzle implementation is, to my understanding, still parsing JSON (though using neither Kafka nor Redis). In my experiments, JSON parsing represents a roughly 35x slowdown (I can parse YSB JSON records at about 900,000/s using [pikkr](https://github.com/pikkr/pikkr), a Rust port of [mison](https://www.microsoft.com/en-us/research/publication/mison-fast-json-parser-data-analytics/) from MSR). This explains the overhead, as well as the gap between these numbers and DataBricks' own report of 60 million records per second on just ten machines.
 
-Knowing only this (and subject to me being corrected) the Drizzle evaluation looks to be less about low-latency stream processing, and more an evaluation of a massively parallel JSON deserializer. The stream processing component, retiring the 20 million records per second, needs at most one core (and some sweet tunes) and you get a 300x reduction in latency as a bonus (probably in no small part due to not using so many machines, Spark). It's actually a really *easy* streaming computation, not one that needs such a scary system unless you build in JSON deserialization as a requirement.
+Knowing only this (and subject to me being corrected) the Drizzle evaluation looks to be less about low-latency stream processing, and more an evaluation of a massively parallel JSON deserializer. The stream processing component, retiring the 20 million records per second, needs at most one core (and some sweet tunes) and you get a 300x reduction in latency as a bonus (probably in no small part due to not using so many machines, Spark). It's actually a relatively *easy* streaming computation, not one that needs such a scary system unless you build in JSON deserialization as a requirement.
 
-As a thought experiment (you too, SOSP2017 PC members): Take a read through the Drizzle paper and try to determine which conclusions about system design would still hold without the overheads of JSON deserialization. I don't know that any of the conclusions are wrong, but would you say they are well-supported by the YSB measurements?
+As a thought experiment: Take a read through the Drizzle paper and try to determine which conclusions about system design would still hold without the overheads of JSON deserialization. I don't know that any of the conclusions are wrong (JSON deserialization may be a great stand-in for "non-trivial compute"), but the overhead of deserialization really seems to obscure the actual systems bottlenecks. If the world shifts tomorrow and everyone starts using [Abomonation](https://github.com/frankmcsherry/abomonation), would any of the Drizzle work need to be rolled back and reconsidered? What about the people already using binary formats (e.g. the current Spark and Flink YSB implementations)?
 
 ### Moving forward
 
 The Flink folks recently [called for an end to the Yahoo Streaming Benchmark](https://data-artisans.com/blog/curious-case-broken-benchmark-revisiting-apache-flink-vs-databricks-runtime). I'm down with that. If nothing else, let's remove the JSON aspect if we want to evaluate *stream processors*. Leave the JSON in if you want to evaluate JSON deserializers.
 
-Here's a sassier position: If you are using JSON or text-based serialization formats, just don't talk about performance. Please. It's really hard to take you seriously with a self-inflicted 25x performance overhead. Learn about extensible binary formats like [CapnProto](https://capnproto.org); earn the respect of your peers; stop paying Amazon to boil the oceans for us.
+Here's a sassier position: If you are using JSON or text-based serialization formats, be careful talking about performance. Please. It's really hard to trust your conclusions when there is a self-inflicted 35x performance overhead. Learn about extensible binary formats like [CapnProto](https://capnproto.org); earn the respect of your peers; stop paying Amazon to boil the oceans for us.
 
-We won't actually learn about stream processors until we start evaluating the stream processor itself. Start.
+We won't actually learn about stream processors until we start evaluating the stream processor itself. Let's start.
