--- a/posts/2018-02-11.md
+++ b/posts/2018-02-11.md
@@ -84,7 +84,7 @@ Does this make any sense? Sure. I mean, what do you have to do for each record? 
 
 I should stress that I'm working pretty hard to avoid doing any work in generating the data. Like the [recent benchmark implementations](https://github.com/dataArtisans/databricks-benchmark/blob/master/src/main/scala/com/databricks/benchmark/flink/EventGenerator.scala#L52-L64) I'm just round-robining through randomly generated ad identifiers and event types (1,000 and 3 are relatively prime). One could complain that I'm doing too little work here (feel free), but we really aren't supposed to be measuring anything other than the streaming computation, right?
 
-### Drizzle
+### Impact on Research
 
 Just this past year at SOSP Berkeley had a paper on [Drizzle](http://shivaram.org/publications/drizzle-sosp17.pdf), a way to slice up Spark computations more finely to the point that maybe they start to look like streaming computations. The paper is not fundamentally about the Yahoo Streaming Benchmark, but they use it as their main metric for assessing the improvements they make over vanilla Spark and Flink. One of the goals of the paper (though not the only one) is to improve latency, and in that effort they arrive at the following result (from their abstract):
 
