--- a/posts/2018-02-11.md
+++ b/posts/2018-02-11.md
@@ -4,6 +4,8 @@ The [Yahoo Streaming Benchmark](https://github.com/yahoo/streaming-benchmarks) i
 
 If you aren't familiar with the benchmark, this matters mostly because papers use it and reach conclusions that may not be as well supported as they hope. This isn't great for the papers, nor for the stream processing research area generally.
 
+**Edit**: Comments from the Drizzle authors in the Drizzle section.
+
 ### The Benchmark
 
 The benchmark models a simple ad account environment, where events describing ad views enter the system and those of a certain type are accounted to their associated campaign. Every ten seconds the stream processor is expected to report the total ads for each campaign within those ten seconds. The benchmark as initially defined brings records in as [JSON](http://json.org) by way of a [Kafka](https://kafka.apache.org) queue, and has the stream processor consult [Redis](https://redis.io) to determine the mapping from advertisement id to campaign id, and as the recipient of the results of the streaming computation.
@@ -98,11 +100,13 @@ The Drizzle-optimized implementation can process 20 million events per second wi
 
 Wait, 128 computers? 512 cores? Don't we get better results with just one laptop core in differential dataflow?
 
-The Drizzle implementation is, to my understanding, still parsing JSON (though using neither Kafka nor Redis). In my experiments, JSON parsing represents a roughly 35x slowdown (I can parse YSB JSON records at about 900,000/s using [pikkr](https://github.com/pikkr/pikkr), a Rust port of [mison](https://www.microsoft.com/en-us/research/publication/mison-fast-json-parser-data-analytics/) from MSR). This explains the overhead, as well as the gap between these numbers and DataBricks' own report of 60 million records per second on just ten machines.
+The Drizzle implementation of YSB is, to my understanding, still parsing JSON (though using neither Kafka nor Redis). In my experiments, JSON parsing represents a roughly 35x slowdown (I can parse YSB JSON records at about 900,000/s using [pikkr](https://github.com/pikkr/pikkr), a Rust port of [mison](https://www.microsoft.com/en-us/research/publication/mison-fast-json-parser-data-analytics/) from MSR). This explains the overhead, as well as the gap between these numbers and DataBricks' own report of 60 million records per second on just ten machines.
 
-Knowing only this (and subject to me being corrected) the Drizzle evaluation looks to be less about low-latency stream processing, and more an evaluation of a massively parallel JSON deserializer. The stream processing component, retiring the 20 million records per second, needs at most one core (and some sweet tunes) and you get a 300x reduction in latency as a bonus (probably in no small part due to not using so many machines, Spark). It's actually a relatively *easy* streaming computation, not one that needs such a scary system unless you build in JSON deserialization as a requirement.
+Knowing only this (and subject to me being corrected) the Drizzle evaluation looks to be less about low-latency stream processing, and more an evaluation on a massively parallel JSON deserialization task. The stream processing component, retiring the 20 million records per second, needs at most one core (and some sweet tunes) and you get a 300x reduction in latency as a bonus (probably in no small part due to not using so many machines, Spark). It's actually a relatively *easy* streaming computation, not one that needs such a scary system unless you build in JSON deserialization as a requirement.
 
 As a thought experiment: Take a read through the Drizzle paper and try to determine which conclusions about system design would still hold without the overheads of JSON deserialization. I don't know that any of the conclusions are wrong (JSON deserialization may be a great stand-in for "non-trivial compute"), but the overhead of deserialization really seems to obscure the actual systems bottlenecks. If the world shifts tomorrow and everyone starts using [Abomonation](https://github.com/frankmcsherry/abomonation), would any of the Drizzle work need to be rolled back and reconsidered? What about the people already using binary formats (e.g. the current Spark and Flink YSB implementations)?
+
+**Edit**: I failed to point out (but should have done) that the Drizzle paper provides additional datapoints where they achieve higher throughputs at the expense of more latency. When they allow themselves a one second latency, for example, their optimized aggregate throughput increases to roughly 110 million elements per second (informally, the optimization accumulates counts in-place before exchanging them, for an amount of time that increases with their target latency).
 
 ### Moving forward
 
