--- a/posts/2018-02-25.md
+++ b/posts/2018-02-25.md
@@ -1,6 +1,8 @@
 ## Uber's differential privacy .. probably isn't
 
-Today we are going to talk through a recently accepted VLDB paper, [Toward Practical Differential Privacy for SQL Queries](http://www.vldb.org/pvldb/vol11/p526-johnson.pdf). Despite what you might guess, I actually think there is a fair bit to like in the goal of the paper, specifically what is implied by its title, and some of the technical development. The world could use more people aimed at the task of providing differential privacy to people who do not have their own advanced degree in differential privacy, and the framework in this paper is a fine zero-th step.
+Today we are going to talk through a recently accepted VLDB paper, [Toward Practical Differential Privacy for SQL Queries](http://www.vldb.org/pvldb/vol11/p526-johnson.pdf). This paper is partly what is behind Uber's [SQL differential privacy](https://github.com/uber/sql-differential-privacy) project, which they have [been](https://medium.com/uber-security-privacy/differential-privacy-open-source-7892c82c42b6) [happily](https://medium.com/uber-security-privacy/uber-open-source-differential-privacy-57f31e85c57a) [plugging](https://www.wired.com/story/uber-privacy-elastic-sensitivity/).
+
+Despite what you might guess, I actually think there is a fair bit to like in the goal of the paper, specifically what is implied by its title, and some of the technical development. The world could use more people aimed at the task of providing differential privacy to people who do not have their own advanced degree in differential privacy, and the framework in this paper is a fine zero-th step.
 
 Unfortunately, the paper has several issues. [Literal](https://github.com/uber/sql-differential-privacy/issues/1) [issues](https://github.com/sunblaze-ucb/elastic-sensitivity-experiments/issues), but also some higher-level issues. I think these issues can be fixed, but I also think they *should have been* fixed. It is too bad that VLDB published the paper as it is, but perhaps the issues can be addressed before the paper is presented (or perhaps the authors can float this post in their presentation, and talk some serious smack while explaining my errors).
 
@@ -8,13 +10,13 @@ Let me start be re-iterating that the core ideas in the paper are sound. I think
 
 The highest level issues are:
 
-1. There is only one experiment the authors perform using public data and queries. I tried to reproduce the results and could not. It appears the authors (unintentionally) over-reported the quality of their results by a factor of 100x: they computed relative error and then listed it as percent error. Unfortunately, they assessed the quality of the results as if percent error and were quite pleased. Instead, three of the five queries (those reported as using joins) are less accurate than simply reporting the value "zero" as the output without looking at the data (henceforth the "just report zero" mechanism).
+1. There is only one experiment the authors perform using public data and queries. I tried to reproduce the results and could not. It appears the authors (unintentionally) over-reported the quality of their results by a factor of 100x: they computed relative error and then listed it as percent error. Unfortunately, they assessed the quality of the results as if percent error and were quite pleased. Instead, three of the five queries (those reported as using joins) are less accurate than simply reporting the value "zero" as the output without looking at the data (henceforth the "just report zero" mechanism). The other two relatively accurately queries are the ones that don't take advantage of the paper's contribution.
 
 2. The reproducible experiments strongly suggest that the code does not correctly handle an important case in SQL queries: [semijoins](https://en.wikipedia.org/wiki/Relational_algebra#Semijoin_(⋉)(⋊)). We will explain what semijoins are, but they are a restricted form of one-to-many joins. Rather than raise an exception, the system instead just introduces an inappropriately small error and reports high accuracy (the correction appears to be another factor of 80x error for one of the queries).
 
 3. The results on non-public data and queries are probably just as wrong with respect to semijoins (though probably not wrong with respect to "'percent' means 'out of one hundred'"). Worryingly, the reported accuracies for the non-public queries involving joins fall in two clusters: "surprisingly good" and "fairly mediocre"; it seems likely that some fraction of the first cluster may migrate to the second cluster (though if we use the paper's calibration, at most 1.0% of them).
 
-4. In any case, on all TPC-H queries you can get strictly more accurate results from existing differential privacy infrastructure, by using one of i. [PINQ](https://www.microsoft.com/en-us/research/publication/privacy-integrated-queries/), ii. [wPINQ](http://www-bcf.usc.edu/~proserpi/wPINQ.html), or iii. the just-invented "just report zero" mechanism.
+4. In any case, on all of the public queries you can get strictly more accurate results from existing differential privacy infrastructure, by using one of i. [PINQ](https://www.microsoft.com/en-us/research/publication/privacy-integrated-queries/), ii. [wPINQ](http://www-bcf.usc.edu/~proserpi/wPINQ.html), or iii. the just-invented "just report zero" mechanism.
 
 I do want to re-iterate, as loudly as I can, that everything I'm going to go through was made variously possible and much easier by the authors' release of the public parts of their experiments. While there are issues, I view the whole thing as a positive for science if we make progress towards the right answer.
 
