--- a/posts/2018-02-25.md
+++ b/posts/2018-02-25.md
@@ -80,7 +80,7 @@ It is not appropriate to just assume the number 100, nor is it appropriate to ju
 
 ### Formalism
 
-The paper has some minor issues with formalism that I think are pretty easily fixed. These are the same issues that the PINQ paper had, and I fixed those. Let me walk through them and explain the fixes.
+The paper has some minor issues with formalism that I think are pretty easily fixed. These are the same challenges that the PINQ paper had, and I fixed those. Let me walk through them and explain the fixes.
 
 The privacy definition the authors use here is a deprecated form of differential privacy, which says that you must mask the difference between *changes* to a record. That is, the same number of records exist in the dataset, but if someone alters a record then the probability must change by at most a factor of exp(epsilon).
 
